--- a/README
+++ b/README
@@ -8,3 +8,6 @@ Dependencies:
 
 For the taglist plugin you must install exuberant-ctags (on Ubuntu for ex: sudo apt-get install exuberant-ctags).
 To run the tidy command with the plugin you must install it (on Ubuntu it's like: sudo apt-get install tidy).
+
+For bash:
+Install vcprompt from here to display the version controll information in your prompt: https://github.com/xvzf/vcprompt 
