Modified README (again)

--- a/README
+++ b/README
@@ -4,6 +4,11 @@ ln -s ~/bin/dotfiles/bashrc ~/.bashrc
 ln -s ~/bin/dotfiles/vimrc ~/.vimrc
 ln -s ~/bin/dotfiles/vim ~/.vim
 
+Initialize and update submodules:
+git submodule update init 
+(you have to be in ~/bin/dotfiles)
+
+
 Dependencies:
 
 For the taglist plugin you must install exuberant-ctags (on Ubuntu for ex: sudo apt-get install exuberant-ctags).
