--- a/README
+++ b/README
@@ -16,6 +16,7 @@ Dependencies:
 
 For the taglist plugin you must install exuberant-ctags (on Ubuntu for ex: sudo apt-get install exuberant-ctags).
 To run the tidy command with the plugin you must install it (on Ubuntu it's like: sudo apt-get install tidy).
+For JSLint node.js or rhino is required (read plugin doc).
 
 For bash:
 Install vcprompt from here to display the version controll information in your prompt: https://github.com/xvzf/vcprompt 
